# RTPLivePush

./: readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  RtpPush.cpp  RtpPush.h  native-lib.cpp
app/src/main/java/com/ryan/rtplivepush/: MainActivity.java  MainApplication.java  MediaPublisher.java
app/src/main/java/com/ryan/rtplivepush/audio/: AudioData.java  AudioRecoderManager.java  PcmToWav.java
app/src/main/java/com/ryan/rtplivepush/camera/: CameraHelper.java  CameraSurfaceView.java  CameraUtil.java  VideoData.java  VideoGatherManager.java
app/src/main/java/com/ryan/rtplivepush/camera/listener/: CameraNVDataListener.java  CameraSurfaceListener.java  CameraYUVDataListener.java
app/src/main/java/com/ryan/rtplivepush/encoder/: MediaEncoder.java
app/src/main/java/com/ryan/rtplivepush/rtp/: MediaPublisher.java  RtpNativeHelper.java
app/src/main/java/com/ryan/rtplivepush/utils/: Contacts.java  FileManager.java  PcmToWav.java  PermissionsUtils.java  SPUtil.java
app/src/main/java/com/ryan/rtplivepush/video/: VideoData.java  VideoGatherManager.java
app/src/main/java/com/ryan/rtplivepush/video/camera/: CameraNVDataListener.java  CameraSurfaceListener.java  CameraSurfaceView.java  CameraUtil.java  CameraYUVDataListener.java
app/src/main/res/layout/: activity_main.xml  layout_camera.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
